tests/unit/default/syntax-error/084-add-pk-table-dot.e.t
---- IN ----
+PK%table.
---- OUT ----
---- ERR ----
syntax: expected <name> after `+PK%table.` instead of EOL at position 10 - at line 1
---- EXIT ----
1
